--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
             </ul>
         </nav>
     </header>
-    <main id="content_main">   
-        <div>
+    <main>   
+        <div class = "content" id="content_main">
             <img src="images/home_pc.jpeg" alt="Dog created using Adobe Illustrator">
             <h1>Home page</h1>
             <p>main Content</p>
+            <img src="images/home_phone.jpeg" alt="cute puffy dog looking up">
         </div>
     </main>
 </body>
