--- a/random_facts.html
+++ b/random_facts.html
@@ -13,7 +13,22 @@
         <a href="#content_Rand" >Skip to Content</a>
     </div>
     <header>
-        <nav>
+        <nav class = "header_nav_mobile">
+                <img src="images/logo.png" alt="Logo of dog palm" id = "logo">
+                <h1>Pawsome <br/> Doggo</h1>
+            <div class="dropdown">
+                <button onclick="menuDrop()" class="dropbtn">Menu▼</button>
+                <div id="dropDownContent" class="dropdown-content">
+                    <a href="index.html">Home</a>
+                    <a href="breeds.html">Dog Breeds</a>
+                    <a href="random_facts.html">Random Dog Facts</a>
+                    <a href="movies_anime.html">Movies and Anime with Dogs</a>
+                </div>
+            </div>
+        </nav>
+        <nav class = "header_nav_pc">
+            <img src="images/logo.png" alt="Logo of dog palm" id = "logo">
+            <h1>Pawsome Doggo</h1>
             <ul>
                 <li>
                     <a href="index.html">Home</a>
@@ -38,6 +53,6 @@
 
         </div>
     </main>
-
+    <script src="js/index.js"></script>
 </body>
 </html>
