--- a/breeds.html
+++ b/breeds.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/grid-breeds.css">
@@ -32,16 +33,16 @@
             <h1>Pawsome Doggo</h1>
             <ul>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html" class = "nav_link">Home</a>
                 </li>
                 <li>
-                    <a href="breeds.html">Dog Breeds</a>
+                    <a href="breeds.html" class = "nav_link">Dog Breeds</a>
                 </li>
                 <li>
-                    <a href="random_facts.html">Random Dog Facts</a>
+                    <a href="random_facts.html" class = "nav_link">Random Dog Facts</a>
                 </li>
                 <li>
-                    <a href="movies_anime.html">Movies and Anime with Dogs</a>
+                    <a href="movies_anime.html" class = "nav_link">Movies and Anime with Dogs</a>
                 </li>
             </ul>
         </nav>
