--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>Dog Home Page</title>
 </head>
 <body>
@@ -31,28 +33,29 @@
             <h1>Pawsome Doggo</h1>
             <ul>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html" class = "nav_link">Home</a>
                 </li>
                 <li>
-                    <a href="breeds.html">Dog Breeds</a>
+                    <a href="breeds.html" class = "nav_link">Dog Breeds</a>
                 </li>
                 <li>
-                    <a href="random_facts.html">Random Dog Facts</a>
+                    <a href="random_facts.html" class = "nav_link">Random Dog Facts</a>
                 </li>
                 <li>
-                    <a href="movies_anime.html">Movies and Anime with Dogs</a>
+                    <a href="movies_anime.html" class = "nav_link">Movies and Anime with Dogs</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main>   
         <div class = "content" id="content_main">
-            <img src="images/PC_home.jpg" alt="Dog created using Adobe Illustrator" id = "PC_home">
-            <h1>Home page</h1>
-            <p>main Content</p>
-            <img src="images/home_phone.jpeg" alt="cute puffy dog looking up" id = "Mobile_home">
+            <img src="images/PC_home.jpg" alt="Dog created using Adobe Illustrator" id = "PC_home_img">
+            <h1>Welcome! Dog Lovers!</h1>
+            <br>
+            <p>Dog is a domesticated descendant of the wolf. Also called the domestic dog, it is derived from the extinct Pleistocene wolf, and the modern wolf is the dog's nearest living relative. Dogs were the first species to be domesticated by hunter-gatherers over 15,000 years ago before the development of agriculture.</p>
+            <img src="images/home_phone.jpeg" alt="cute puffy dog looking up" id = "Mobile_home_img">
         </div>
     </main>
-    <script src="js/index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
