--- a/movies_anime.html
+++ b/movies_anime.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/flex-movie.css">
     <title>Movies and Anime with dog</title>
@@ -27,23 +28,23 @@
             </div>
         </nav>
         <nav class = "header_nav_pc">
-            <img src="images/logo.png" alt="Logo of dog palm" id = "logo">
-            <h1>Pawsome Doggo</h1>
-            <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="breeds.html">Dog Breeds</a>
-                </li>
-                <li>
-                    <a href="random_facts.html">Random Dog Facts</a>
-                </li>
-                <li>
-                    <a href="movies_anime.html">Movies and Anime with Dogs</a>
-                </li>
-            </ul>
-        </nav>
+          <img src="images/logo.png" alt="Logo of dog palm" id = "logo">
+          <h1>Pawsome Doggo</h1>
+          <ul>
+              <li>
+                  <a href="index.html" class = "nav_link">Home</a>
+              </li>
+              <li>
+                  <a href="breeds.html" class = "nav_link">Dog Breeds</a>
+              </li>
+              <li>
+                  <a href="random_facts.html" class = "nav_link">Random Dog Facts</a>
+              </li>
+              <li>
+                  <a href="movies_anime.html" class = "nav_link">Movies and Anime with Dogs</a>
+              </li>
+          </ul>
+      </nav>
     </header>
     <main>
         <h2>Movies / Anime with dog as main character</h2>
