--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </div>
     <header>
         <nav class = "header_nav_mobile">
-                <img src="images/logo.png" alt="Logo of dog palm" id = "logo">
-                <h1>Pawsome <br/> Doggo</h1>
+                <img src="images/logo.png" alt="Logo of dog palm" class = "logo">
+                <h1>Pawsome Doggo</h1>
             <div class="dropdown">
                 <button onclick="menuDrop()" class="dropbtn">Menu▼</button>
                 <div id="dropDownContent" class="dropdown-content">
@@ -29,7 +29,7 @@
             </div>
         </nav>
         <nav class = "header_nav_pc">
-            <img src="images/logo.png" alt="Logo of dog palm" id = "logo">
+            <img src="images/logo.png" alt="Logo of dog palm" class = "logo">
             <h1>Pawsome Doggo</h1>
             <ul>
                 <li>
@@ -50,10 +50,12 @@
     <main>   
         <div class = "content" id="content_main">
             <img src="images/PC_home.jpg" alt="Dog created using Adobe Illustrator" id = "PC_home_img">
-            <h1>Welcome! Dog Lovers!</h1>
+            <img src="images/extend_home.png" alt ="extend background of puffy dog" id="extend_bg_home_mobile">
+            <img src="images/home_phone.jpeg" alt="cute puffy dog looking up" id = "Mobile_home_img">
+            <h2>Welcome! Dog Lovers!</h2>
             <br>
             <p>Dog is a domesticated descendant of the wolf. Also called the domestic dog, it is derived from the extinct Pleistocene wolf, and the modern wolf is the dog's nearest living relative. Dogs were the first species to be domesticated by hunter-gatherers over 15,000 years ago before the development of agriculture.</p>
-            <img src="images/home_phone.jpeg" alt="cute puffy dog looking up" id = "Mobile_home_img">
+            
         </div>
     </main>
     <script src="./js/index.js"></script>
