--- a/breeds.html
+++ b/breeds.html
@@ -16,7 +16,7 @@
     </div>
     <header>
         <nav class = "header_nav_mobile">
-                <img src="images/logo.png" alt="Logo of dog palm" id = "logo">
+                <img src="images/logo.png" alt="Logo of dog palm" class = "logo">
                 <h1>Pawsome <br/> Doggo</h1>
             <div class="dropdown">
                 <button onclick="menuDrop()" class="dropbtn">Menu▼</button>
@@ -29,7 +29,7 @@
             </div>
         </nav>
         <nav class = "header_nav_pc">
-            <img src="images/logo.png" alt="Logo of dog palm" id = "logo">
+            <img src="images/logo.png" alt="Logo of dog palm" class = "logo">
             <h1>Pawsome Doggo</h1>
             <ul>
                 <li>
