--- a/movies_anime.html
+++ b/movies_anime.html
@@ -49,41 +49,69 @@
     <main>
         <h2>Movies / Anime with dog as main character</h2>
         <div class="content" id="content_movie">
-          <div class="movie">
-            <img src="images/movie/101dalmatians.webp" alt="101 Dalmatians">
-            <figcaption>Poster of 101 Dalmatians</figcaption>
+          <div class="movie" tabindex="0">
+            <img src="images/movie/101dalmatians.webp" alt="Poster of 101 Dalmatians">
+            <figcaption>101 Dalmatians</figcaption>
+            <div class="overlay">
+              <div class="text">101 Dalmatians is a classic Disney film that tells the heartwarming story of a brave group of Dalmatians on a mission to save themselves from the clutches of an evil fur coat-obsessed villain.
+              </div>
+            </div>
           </div>
-          <div class="movie">
-            <img src="images/movie/A Dog's Journey.jpg" alt="A Dog's Journey">
-            <figcaption>Poster of A Dog's Journey</figcaption>
+          <div class="movie" tabindex="0">
+            <img src="images/movie/A Dog's Journey.jpg" alt="Poster of A Dog's Journey">
+            <figcaption>A Dog's Journey</figcaption>
+            <div class="overlay">
+              <div class="text">"A Dog's Journey" follows the story of a dog named Bailey, who embarks on a journey to protect and comfort his owner's granddaughter throughout her life, while reflecting on his own purpose in life as a loyal and loving companion.</div>
+            </div>
           </div>
-          <div class="movie">
+          <div class="movie" tabindex="0">
             <img src="images/movie/benji.jpg" alt="Poster of benji">
             <figcaption>Benji</figcaption>
+            <div class="overlay">
+              <div class="text">"Benji" is a heartwarming adventure film about a stray dog who helps rescue two children from kidnappers, showcasing the unwavering loyalty and bravery that dogs can possess.</div>
+            </div>
           </div>
-          <div class="movie">
+          <div class="movie" tabindex="0">
             <img src="images/movie/bolt.jpg" alt="Poster of bolt">
             <figcaption>Bolt</figcaption>
+            <div class="overlay">
+              <div class="text">"Bolt" tells the story of a dog who believes he possesses superpowers due to his role as a TV star, and his journey to find his way back to his owner, teaching him the true meaning of companionship and friendship along the way.</div>
+            </div>
           </div>
-          <div class="movie">
+          <div class="movie" tabindex="0">
             <img src="images/movie/A Goofy Movie.jpeg" alt="Poster of A Goofy Movie">
             <figcaption>A Goofy Movie</figcaption>
+            <div class="overlay">
+              <div class="text">"A Goofy Movie" features the lovable Goofy and his son, Max, as they embark on a father-son bonding trip, filled with fun and laughter, highlighting the unique bond between dogs and their owners.</div>
+            </div>
           </div>
-          <div class="movie">
+          <div class="movie" tabindex="0" >
             <img src="images/movie/Hachi- A Dog's Tale.jpg" alt="Poster of Hachi- A Dog's Tale">
-            <figcaption>Poster of Hachi - A Dog's Tale</figcaption>
+            <figcaption>Hachi - A Dog's Tale</figcaption>
+            <div class="overlay">
+              <div class="text">"Hachi - A Dog's Tale" is a heart-wrenching true story of a loyal dog named Hachiko, who patiently waits for his owner's return every day, even after his owner's sudden death, showcasing the depth of love and loyalty that dogs can possess. My Personal Favorite!</div>
+            </div>
           </div>
-          <div class="movie">
+          <div class="movie" tabindex="0">
             <img src="images/movie/The Secret Lift of pets.jpg" alt="Poster of The Secret Lift of pets">
             <figcaption>The Secret Lift of pets</figcaption>
+            <div class="overlay">
+              <div class="text">"The Secret Life of Pets" offers a hilarious insight into the lives of pets when their owners are away, showcasing their quirky and amusing antics and highlighting the unique personalities that dogs and other pets can have.</div>
+            </div>
           </div>
-          <div class="movie">
+          <div class="movie" tabindex="0">
             <img src="images/movie/The Tibetan Dog.jpg" alt="Poster of the Tibetan Dog">
             <figcaption>The Tibetan Dog</figcaption>
+            <div class="overlay">
+              <div class="text">"The Tibetan Dog" tells the story of a boy named Tenzing and his dog, who must navigate the challenges of life in a remote mountain village, highlighting the strong bond between dogs and their owners and their resilience in the face of adversity. </div>
+            </div>
           </div>
-          <div class="movie">
+          <div class="movie" tabindex="0">
             <img src="images/movie/lady and the tramp.webp" alt="Poster of lady and the tramp">
             <figcaption>Lady and the Tramp</figcaption>
+            <div class="overlay">
+              <div class="text">"Lady and the Tramp" is a classic romantic tale of two dogs from different worlds, Lady and Tramp, as they embark on a journey filled with adventure and romance, showcasing the power of love and companionship between dogs.</div>
+            </div>
           </div>
         </div>
       </main>
