--- a/random_facts.html
+++ b/random_facts.html
@@ -50,7 +50,7 @@
     <main>
         <div class="content" id ="content_Rand">
             <h2>Want to learn some fun fact about us?</h2>
-            <button onclick="rd_fact()">Yes!</button>
+            <button onclick="rd_fact()" id="yes_bt">Yes!</button>
             <img src="images/random_fact.jpeg" alt="dog shaking its head hardly" id="shake_head">
             <img src="images/funny-hipster-cute-dog-art-illustration-anthropomorphic-dogs_739548-732.avif" alt="funny hipster cute dog art illustration anthropomorphic dogsy" id="hipster">
         </div>
