refine according to peer advices

--- a/breeds.html
+++ b/breeds.html
@@ -50,23 +50,23 @@
     <h2>Do you know about us?</h2>
     <div class="content" id = "content_breed">
        <img src="images/breeds/beagle.jpeg" alt="Young beagle standing on rock" tabindex="0"> 
-       <figcaption>Beagle: <br> I'm a friendly and curious Beagle, known for my adorable floppy ears and excellent sense of smell. </figcaption>
+       <figcaption>Beagle:<br> I'm a friendly and curious Beagle, known for my adorable floppy ears and excellent sense of smell. </figcaption>
        <img src="images/breeds/boston-terrier.jpeg" alt="Boston Terrier standing on grass" tabindex="0"> 
-       <figcaption>Boston Terrier<br>I'm a spunky little Boston Terrier with big ears and an even bigger personality!</figcaption>
+       <figcaption>Boston Terrier:<br>I'm a spunky little Boston Terrier with big ears and an even bigger personality!</figcaption>
        <img src="images/breeds/chihuahua.jpeg" alt="Cute chihuahua sticking its tongue" tabindex="0">
-       <figcaption>Chihuahua<br>With my tiny frame, pointy ears, and big, bright eyes, I'm just too cute to handle!</figcaption>
+       <figcaption>Chihuahua:<br>With my tiny frame, pointy ears, and big, bright eyes, I'm just too cute to handle!</figcaption>
        <img src="images/breeds/bulldog.webp" alt="Bulldog standing on grass" tabindex="0">
-       <figcaption>Bulldog<br> I'm a lovable Bulldog with a sturdy frame, wrinkly face, and an endearing underbite that makes me impossible to resist!</figcaption>
+       <figcaption>Bulldog:<br> I'm a lovable Bulldog with a sturdy frame, wrinkly face, and an endearing underbite that makes me impossible to resist!</figcaption>
        <img src="images/breeds/corgi.jpeg" alt="corgi on grass" tabindex="0"> 
-       <figcaption>Corgi<br>My short legs, long body, and big, perky ears make me a one-of-a-kind cutie with a charming smile!</figcaption>
+       <figcaption>Corgi:<br>My short legs, long body, and big, perky ears make me a one-of-a-kind cutie with a charming smile!</figcaption>
        <img src="images/breeds/dachshund.jpeg" alt="black dachshund on slope" tabindex="0"> 
-       <figcaption>Dachshund<br>My elongated body, short legs, and floppy ears give me a distinct look that's both cute and courageous!</figcaption>
+       <figcaption>Dachshund:<br>My elongated body, short legs, and floppy ears give me a distinct look that's both cute and courageous!</figcaption>
        <img src="images/breeds/Pomeranian.jpeg" alt="cute Pomeranian running on fall leaves" tabindex="0"> 
-       <figcaption>Pomeranian<br>I'm a fluffy ball of fur with a fox-like face, a plumed tail, and a bright, cheerful expression that's simply irresistible!</figcaption>
+       <figcaption>Pomeranian:<br>I'm a fluffy ball of fur with a fox-like face, a plumed tail, and a bright, cheerful expression that's simply irresistible!</figcaption>
        <img src="images/breeds/Yorkshire Terrier.jpeg" alt="Yorkshire Terrier sitting on grass" tabindex="0">
-       <figcaption>Yorkshire<br>I'm a spunky Yorkshire Terrier with a silky coat, perky ears, and a confident strut that lets everyone know who's boss!</figcaption>
+       <figcaption>Yorkshire:<br>I'm a spunky Yorkshire Terrier with a silky coat, perky ears, and a confident strut that lets everyone know who's boss!</figcaption>
        <img src="images/breeds/Poodle.jpeg" alt="stylish Poodle on beach" tabindex="0">
-       <figcaption>Poodle<br>I'm a proud and elegant Poodle with a curly coat, long, thin legs, and a regal posture that turns heads wherever I go!</figcaption>
+       <figcaption>Poodle:<br>I'm a proud and elegant Poodle with a curly coat, long, thin legs, and a regal posture that turns heads wherever I go!</figcaption>
     </div>
     <script src="js/index.js"></script>
 </body>
